ud protocol enabled

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -3,12 +3,14 @@ input {
 		port => 5044
 	}
 
-	tcp {
-		port => 50000
-	}
+	udp {
+        port => 50000
+        codec => "json"
+    }
 }
 
 ## Add your filters / logstash plugins configuration here
+
 
 output {
 	elasticsearch {
@@ -17,3 +19,6 @@ output {
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
 	}
 }
+
+
+
