new index added

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -5,11 +5,21 @@ input {
 
 	udp {
         port => 50000
-        codec => "json"
     }
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+
+    json {
+        source => "message"
+        target => "log"
+    }
+
+    mutate {
+      remove_field => ["message"]
+    }
+}
 
 
 output {
@@ -17,6 +27,7 @@ output {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		index => "laravel-log-%{+YYYY.MM.dd}"
 	}
 }
 
